--- a/0.4.3/samples/helloforum.css
+++ b/0.4.3/samples/helloforum.css
@@ -1,4 +1,5 @@
-.MUTE	{display:none !important;}
+.-MUTE	{display:none !important;}
+.MUTE {border:1px solid red}
 
 .button, .ui {cursor:pointer;}
 
