--- a/0.4.3/samples/helloforum.css
+++ b/0.4.3/samples/helloforum.css
@@ -1,5 +1,4 @@
-.-MUTE	{display:none !important;}
-.MUTE {border:1px solid red}
+.MUTE	{display:none !important;}
 
 .button, .ui {cursor:pointer;}
 
