--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,4 @@
-body{max-width: 64em; margin:2em auto; padding:1em; font:normal 1em/1.5 sans-serif; }
+body{max-width: 64em; margin:2em auto; padding:1em; font:normal 1em/1.6 Georgia,serif; }
 h3{margin-top:2em;}
 code{background:aliceblue; padding:2px; white-space:nowrap; }
 
