--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,5 @@
 .ui{cursor:pointer}
+.ui:hover{text-decoration:underline}
 .MUTE{display:none !important}
 
 body{max-width: 72em; margin:2em auto; padding:1em; font:normal 1em/1.6 Georgia,serif; }
@@ -11,9 +12,9 @@ code{background:aliceblue; padding:2px; white-space:nowrap; }
 
 .dapify>.buttons{position:absolute; right:.5em; margin-top:-2em;}
 .dapify>.buttons>.welcome{display:inline; color:cornflowerblue; font:italic .9em sans-serif; margin-right:1em; }
-.dapify>.run{border:2px solid lavender; display:block; width: 100%; box-sizing: border-box; padding:1em;}
+.dapify>.run{padding:1em; box-shadow: 0 4px 8px rgba(0,40,50,.1)}
    
-pre{text-align:left; padding:2em; background-color:aliceblue; border:1px solid lavender; font: normal 1.2em/1.5 monospace; overflow:auto; }
+pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; overflow:auto; }
 pre>i{color:cornflowerblue;}
 pre>b{color:mediumblue}
 pre>em{background:lavender; font-style:normal}
