--- a/docs/styles.css
+++ b/docs/styles.css
@@ -14,7 +14,7 @@ code{background:aliceblue; padding:2px; white-space:nowrap; }
 .dapify>.buttons>.welcome{display:inline; color:cornflowerblue; font:italic .9em sans-serif; margin-right:1em; }
 .dapify>.run{padding:1em; box-shadow: 0 4px 12px rgba(0,40,50,.25); margin-top:1em; }
    
-pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; overflow:auto; }
+pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; max-height:32em; overflow:auto; }
 pre>i{color:cornflowerblue;}
 pre>b{color:mediumblue}
 pre>em{background:lavender; font-style:normal}
