--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,7 +13,7 @@ code{background:aliceblue; padding:2px; white-space:nowrap; }
 /* dapify styles */
 .dapify	{margin:2em 0; position:relative}
 .dapify>pre{margin:0}
-.dapify>.run{padding:1em; box-shadow: 0 4px 12px rgba(0,40,50,.25); margin-top:1em; }
+.dapify>.run{padding:1em; box-shadow: 0 4px 12px rgba(0,40,50,.25); margin-top:1em; overflow:auto}
 
 .dapify>.buttons{position:absolute; right:4px; margin-top:-28px;}
 .dapify>.buttons>button{margin:0; width:32px; height:24px; }
