--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,6 +10,15 @@ code{background:aliceblue; padding:2px; white-space:nowrap; }
 .labelled {margin-top:1em; position:relative;}
 .labelled::before{content:attr(label); position:absolute; top:-2em; font-weight:bold; }
 
+header{text-align:center; font-size:1.2em}
+
+h2{margin-top:4em}
+
+#whydap{display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 3em;}
+#whydap>section{text-align:center}
+#whydap>section>h3{display:inline-block; padding: .4em 1em; background:#fd6}
+
+
 /* dapify styles */
 .dapify	{margin:2em 0; position:relative}
 .dapify>pre{margin:0}
