--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,9 +32,19 @@ h2{margin-top:4em}
 button.render:before{content:"►"}
 button.reset:before{content:"⌂"}
  
-pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; max-height:32em; overflow:auto; }
+pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; overflow:auto; }
 pre>i{color:cornflowerblue;}
 pre>b{color:mediumblue}
 pre>em{background:lavender; font-style:normal}
 
+
+/* samples */
 .colored-fruits>ul{display:inline-block; vertical-align:top; margin:2em 1em; width:8em;}
+
+ol { counter-reset: item }
+ol>li { display: block }
+ol>li:before { content: counters(item, ".") ". "; counter-increment: item; color:lightgray }
+  
+
+
+
