--- a/docs/styles.css
+++ b/docs/styles.css
@@ -40,13 +40,15 @@ pre>em{background:lavender; font-style:normal}
 
 /* samples */
 .colored-fruits>ul{display:inline-block; vertical-align:top; margin:2em 1em; width:8em;}
-.contents{max-height:16em; width:32em}
+.contents-sample{max-height:16em; width:32em}
 
-
+/* Multi-level OL numbering
 ol { counter-reset: item }
 ol>li { display: block }
 ol>li:before { content: counters(item, ".") ". "; counter-increment: item; color:lightgray }
-  
-A.page{margin-left:1em}
+*/
+
+UL.contents{list-style:none}
+A.page, A.section {margin:1em}
 
 
