--- a/docs/styles.css
+++ b/docs/styles.css
@@ -36,7 +36,8 @@ button.render:before{content:"►"}
 button.reset:before{content:"⌂"}
  
 pre{text-align:left; padding:2em; background-color:aliceblue; font: normal 1.2em/1.5 monospace; overflow:auto; }
-pre>i{color:cornflowerblue;}
+pre>i{color:cornflowerblue; opacity:.2; transition:opacity .5s}
+pre:hover>i{opacity:1}
 pre>b{color:mediumblue}
 pre>em{background:lavender; font-style:normal}
 
