--- a/samples/stacks/styles.css
+++ b/samples/stacks/styles.css
@@ -1,9 +1,21 @@
 .EMPTY{display:none}
 
+
+html,body,.stacks{
+	height:100%;
+}
+
 body{
 	text-align:center;
 	width: 600px;
-	margin: 0;
+	margin: 0 auto;
+}
+ 
+@media(max-width:600px)	{
+	body{
+		width: 100%;
+		margin: 0;
+	}
 }
 
 h2{
@@ -16,10 +28,9 @@ h2{
 
 .pot{
 	transform: rotate(180deg);
-  background: linear-gradient(0deg, #48f, #dff);
-  width: 600px;
-  height: 800px;
-  overflow: hidden;
+	background: linear-gradient(0deg, #48f, #dff);
+	width: 100%;
+	height: 100%;
 }
 
 .rows{
@@ -29,19 +40,21 @@ h2{
 .rows::before{
  position:absolute;
  left: 0;
- bottom:-80px;
+ bottom: 0px;
  content:"";
- width:600px;
- height:900px;
+ width: 100%;
+ height: 100%;
  transform:rotate(180deg);
- background: url(https://avatanplus.com/files/resources/mid/5a223ae3d369a16015b60a1a.png) center no-repeat;
+ background: url(pics/5c88d267e4c311697675e601.png) top no-repeat;
 }
 
 .row{
 	position: relative;
-	background: rgba(255,0,255,.95);
+	background: rgba(255,0,255,.9);
+	border: 1px solid fuchsia;
+	border-radius: 4px;
 	height:1em;
-	box-shadow: 0 0 8px white;
+	box-shadow: 0 -1px 4px pink;
 }
 
 .slide{
