--- a/samples/stacks/styles.css
+++ b/samples/stacks/styles.css
@@ -37,7 +37,7 @@ h2{
 	position:relative;
  }
 
-.rows::before{
+.rows>.pic{
  position:absolute;
  left: 0;
  bottom: 0px;
@@ -45,7 +45,9 @@ h2{
  width: 100%;
  height: 100%;
  transform:rotate(180deg);
- background: url(pics/5c88d267e4c311697675e601.png) top no-repeat;
+ background-position: top;
+ background-repeat: no-repeat;
+ background-size: cover;
 }
 
 .row{
@@ -57,6 +59,31 @@ h2{
 	box-shadow: 0 -1px 4px pink;
 }
 
+/*
 .slide{
-	/* background: fuchsia; */
+	background: pink;
 }
+*/
+
+.thumb{
+	display:inline-block;
+	margin-top:1em;
+	border-bottom: 1em solid;
+	width: 33%;
+	height:8em;
+	background: bottom no-repeat;
+	background-size: contain;
+}
+
+.pic0{background-image:url(pics/5baa557d5b436166115df1be.png)}
+.pic1{background-image:url(pics/5c8f6e56071161699047000d.png)}
+.pic2{background-image:url(pics/5a546728e2a80160d9b2f7e0.png)}
+.pic3{background-image:url(pics/592152f0e113915c2a2bfd1a.png)}
+.pic4{background-image:url(pics/5ab888f1a51f616260d6f00c.png)}
+.pic5{background-image:url(pics/5c3af381a14a51684647327d.png)}
+.pic6{background-image:url(pics/5c7b5a81be3a116941d98af3.png)}
+.pic7{background-image:url(pics/5c834e25554c216960e941e5.png)}
+.pic8{background-image:url(pics/5c88d267e4c311697675e601.png)}
+.pic9{background-image:url(pics/5c8b78297856516980cd6215.png)}
+.pic10{background-image:url(pics/59d6382e3553515eeccb748a.png)}
+.pic11{background-image:url(pics/5c7d0df8087f6169487e90e3.png)}
