--- a/samples/repch/css/colors.css
+++ b/samples/repch/css/colors.css
@@ -2,9 +2,9 @@ input::placeholder, [contenteditable]:empty::before, .fallback, .aspect>.name::b
 {color:lightgray}
 
 [contenteditable]:focus, [contenteditable]:empty
-{/* background-color: white */}
+{/* background-color: white */border: none;outline: none;text-decoration: underline;}
 
-button{border:none; background:none}
+button{border:none;background:none;}
 
 roof{color:white}
 
