--- a/samples/repch/css/material.css
+++ b/samples/repch/css/material.css
@@ -167,7 +167,8 @@ section{
 
 
 input.key {
-    flex: 1;
+    /* flex: 1; */
+    width: 100%;
     text-align: center;
     border: 2px solid;
     border-radius: 1.5rem;
@@ -210,7 +211,7 @@ input.credit {
 
 .tag {
     display: inline-block;
-    margin: .2em;
+    /* margin: .2em; */
     padding: .25em .5em;
     border: 1px solid transparent;
     border-radius: 1em;
@@ -337,7 +338,7 @@ attic {
 
 
 .opinion {
-    margin: 1.5em 0;
+    margin: 1em 0;
     position: relative;
 }
 
