--- a/samples/repch/css/material.css
+++ b/samples/repch/css/material.css
@@ -31,7 +31,7 @@ icon, button::before, .checked::before
   text-rendering: optimizeLegibility;	/* Support for Safari and Chrome. */
   -moz-osx-font-smoothing: grayscale; 	/* Support for Firefox. */
   font-feature-settings: 'liga';		/* Support for IE. */
-  color: inherit;
+  /* color: inherit; */
 }
 
 .checked::before {content: "check";position: absolute;right:0;top:0;}
@@ -98,7 +98,7 @@ page {
 roof{
     position:relative;
     z-index: 1;
-    box-shadow: 0 8px 8px rgba(0,0,0,.2);
+    /* box-shadow: 0 8px 8px rgba(0,0,0,.2); */
 }
 
 etage {
@@ -121,7 +121,10 @@ attic>select{
 	border: none;
 	background: none;
 	outline: none;
-	border-bottom: 1px solid;
+	/* border-bottom: 1px solid; */
+	background: white;
+	border-radius: 1em;
+	padding: .5em;
 }
 
 attic>bar {
@@ -169,7 +172,8 @@ section{
 input.key {
     /* flex: 1; */
     width: 100%;
-    text-align: center;
+    /* text-align: center; */
+    padding: 0 1em;
     border: 2px solid;
     border-radius: 1.5rem;
 }
@@ -211,11 +215,12 @@ input.credit {
 
 .tag {
     display: inline-block;
-    /* margin: .2em; */
+    margin: .2em;
     padding: .25em .5em;
     border: 1px solid transparent;
     border-radius: 1em;
-    color: lightgray;
+    background-color: antiquewhite;
+    color: darkgray;
 }
 
 
@@ -300,6 +305,7 @@ stars {
 
 stars:before {
     content:"★★★★★";
+    /* opacity: .25; */
 }
 stars>stars {
     position: absolute;
@@ -312,8 +318,8 @@ stars>stars {
 
 .credit>stars {
 	font: normal 1em/.7em sans-serif;
-	margin-left: .25em;
-	letter-spacing: 2px;
+	/* margin-left: .25em; */
+	/* letter-spacing: 4px; */
 }
 
 
@@ -326,6 +332,7 @@ stars>stars {
 attic {
     padding: .5rem;
     margin: 0;
+    height: 3rem;
 }
 
 .lists>li {
@@ -550,4 +557,9 @@ section>button {
   position: absolute;
   right: 0;
   bottom: 0;
+}
+
+roof>.credit {
+  font-size: 1.5em;
+  margin: .5em;
 }
