--- a/samples/repch/css/material.css
+++ b/samples/repch/css/material.css
@@ -19,7 +19,8 @@ icon, button::before, .checked::before
   font-weight: normal;
   font-style: normal;
   font-size: 1.5rem;  /* Preferred icon size */
-  padding: .5em;
+  padding: .2em;
+  margin: 0 .2em;
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -113,14 +114,15 @@ attic{
 attic>select{
 	width:100%;
 	color: inherit;
-	font-size: 1.25em;
+	/* font-size: 1.25em; */
 	border: none;
 	background: none;
 	outline: none;
 	/* border-bottom: 1px solid; */
 	background: white;
-	border-radius: 1em;
+	border-radius: .25em;
 	padding: .5em;
+	margin-right: 1em;
 }
 
 attic>bar {
@@ -135,16 +137,17 @@ vault {
     display: flex;
     margin: 0;
     font-size: 1.25em;
-    box-shadow: 0 -.5rem .5rem white;
+    /* box-shadow: 0 -.5rem .5rem white; */
     z-index: 1;
 }
 
 tabset {
-	position:absolute;
+	/* position:absolute; */
 	bottom:0;
 	left: 1rem;
 	text-transform: uppercase;
-	font-size: .9em;
+	margin: 0 1em;
+	/* font-size: .9em; */
 }
 
 tab {
@@ -169,9 +172,9 @@ input.key {
     /* flex: 1; */
     width: 100%;
     /* text-align: center; */
-    padding: 0 1em;
+    padding-left: 1em;
     border: 2px solid;
-    border-radius: 1.5rem;
+    border-radius: .5rem;
 }
 
 input, select {
@@ -222,7 +225,8 @@ input.credit {
 
 
 ul.entities {
-    padding: 0;
+    background: whitesmoke;
+    padding: .5em 0;
     margin: 0;
     text-align: left;
     width: 100%;
@@ -231,7 +235,9 @@ ul.entities {
 }
 
 ul.entities>li {
-    padding: .75rem .5rem;
+    margin: .5em 1em;
+    padding: .25rem .5rem;
+    border-radius: .5em;
     box-sizing: border-box;
     white-space: nowrap;
     overflow: hidden;
@@ -266,7 +272,7 @@ section.entries {
 }
 
 
-roof>.title{font-size: 1.25em; margin: .5em 0;}
+.title{font-size: 1.25em;margin: .25em 0;}
 
 .aspect>.summary {
     display: flex;
@@ -328,7 +334,7 @@ stars>stars {
 attic {
     padding: .5rem;
     margin: 0;
-    height: 3rem;
+    height: 2rem;
 }
 
 .lists>li {
@@ -440,8 +446,10 @@ article {
 .tick {
     position: absolute;
     right: 0;
-    width: 3em;
+    width: 25%;
+    /* border: 1px solid whitesmoke; */
     height: 100%;
+    /* border-radius: 50%; */
     top: 0;
     color: black;
 }
@@ -558,4 +566,16 @@ section>button {
 roof>.credit {
   font-size: 1.5em;
   margin: .5em;
+}
+
+roof>deck {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+etage>deck {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
